--- a/LAeq and LEX/Content/Site.css
+++ b/LAeq and LEX/Content/Site.css
@@ -1,6 +1,8 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 10px;
     padding-bottom: 20px;
+    /*background-color: #dee7f2;*/
+    background-image:url("/img/bg0.png");
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -22,3 +24,5 @@ select,
 textarea {
     max-width: 280px;
 }
+
+
